# Praxis

./: README.md
documents/: first_principles.md
documents/week1/: commit.md  start.md
manifesto/: note.txt
praxis-core/: .gitignore  PDR.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
praxis-core/praxis/tokenizer/: Test.py  __init__.py  base.py  character.py
praxis-core/tests/unit/: __init__.py  test_character_tokenizer.py
