[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis"
version = "0.1.0"
description = "Praxis Core — build, train, and deploy custom transformer models from scratch"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Praxis" }]
keywords = ["machine-learning", "transformer", "nlp", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "einops>=0.7",
    "safetensors>=0.4",
    "tokenizers>=0.15",
    "datasets>=2.14",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.5",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.18",
]
export = [
    "onnx>=1.15",
    "onnxruntime>=1.16",
]
all = ["praxis[dev,viz,export]"]

[project.scripts]
praxis-train = "scripts.train:main"
praxis-eval = "scripts.evaluate:main"
praxis-infer = "scripts.inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["praxis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
